modificaciones en estilos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
           </a>
         </div>
         <input type="checkbox" id="toggler">
-        <label for="toggler" class="contenedor_burgerMenu"><img class="burger_menu" src="./assets/icons/menu.png" alt=""></label>
+        <label for="toggler" class="contenedor_burgerMenu">
+          <div id="burgerMenu" class="center">
+            <div id="burgerMenuDiv"></div>
+          </div>
+        </label>
         <div id="contenedor_header_secciones" class="contenedor_header_secciones">
           <ul class="list">
             <li><a class="anchord_secciones" href="./pages/nosotros.html">Nosotros</a></li>
@@ -57,5 +61,6 @@
 
 
     </footer>
+    <script type="text/javascript" src="./js/burgerMenu.js"></script>
   </body>
 </html>
