--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header id="index_header" class="index_header">
+    <header id="index_header" class="header_hidden header">
       <nav id="navbar" class="navbar">
         <div id="contenedor_logo_header" class="contenedor_logo_header">
           <a class="anchord_logo" href="index.html">
@@ -42,9 +42,47 @@
         </div>
       </nav>
     </header>
-    <main id="index_main" class="index_main">
-      <section id="" class="section_prueba">
-        <h1>prueba</h1>
+    <aside id="contenedorPreload" class="contenedor_preload">
+      <video class="preload" type="video/mp4" autoplay muted preload>
+        <source src="./assets/preload/preload.mp4">
+      </video>
+    </aside>
+    <main id="index_main" class="main">
+
+      <section id="sectionPresentacion" class="section_presentacion">
+        <div id="contenedorPresentacion" class="contenedor_presentacion">
+          <!-- text animation-->
+          <div class="container_textAnimation">
+            <svg viewBox="0 0 1418 116">
+              <title>@IMPULSAR</title>
+              <g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
+                <text id="textAnimation" class="textAnimation">
+                  <tspan x="3" y="109"><!--
+                    --><tspan>@</tspan><!--
+                    --><tspan>I</tspan><!--
+                    --><tspan>M</tspan><!--
+                    --><tspan>P</tspan><!--
+                    --><tspan>U</tspan><!--
+                    --><tspan>L</tspan><!--
+                    --><tspan>S</tspan><!--
+                    --><tspan>A</tspan><!--
+                    --><tspan>R</tspan>
+                  </tspan>
+                </text>
+              </g>
+            </svg>        
+          </div>
+          <!-- Scroll animation-->   
+          <div id="contenedorAnimationScroll" class="contenedor_animationScroll">
+            <svg class="mouse" xmlns="..." viewBox="0 0 76 130" preserveAspectRatio="xMidYmid meet">
+              <g fill="none" fill-rule="evenodd">
+              <rect width="70" height="118" x="1.5" y="1.5" stroke="#FFF" stroke-width="3" rx="36"/>
+              <circle class="scroll" cx="36.5" cy="31.5" r="4.5" fill="#FFF"/>
+              </g>
+            </svg>
+            <p class="animationScroll_p">Desliza</p>
+          </div>       
+        </div>
       </section>
     </main>
     <footer id="index_footer" class="index_footer">
@@ -61,6 +99,6 @@
 
 
     </footer>
-    <script type="text/javascript" src="./js/burgerMenu.js"></script>
+    <script type="text/javascript" src="./js/preload.js"></script>
   </body>
 </html>
