--- a/index.html
+++ b/index.html
@@ -43,22 +43,20 @@
       </nav>
     </header>
     <aside id="contenedorPreload" class="contenedor_preload">
-      <video class="preload" type="video/mp4" autoplay muted preload>
+      <video class="preload" type="video/mp4" autoplay muted preload controls>
         <source src="./assets/preload/preload.mp4">
       </video>
     </aside>
     <main id="index_main" class="main">
-
       <section id="sectionPresentacion" class="section_presentacion">
         <div id="contenedorPresentacion" class="contenedor_presentacion">
           <!-- text animation-->
           <div class="container_textAnimation">
             <svg viewBox="0 0 1418 116">
-              <title>@IMPULSAR</title>
+              <title>IMPULSAR</title>
               <g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
                 <text id="textAnimation" class="textAnimation">
                   <tspan x="3" y="109"><!--
-                    --><tspan>@</tspan><!--
                     --><tspan>I</tspan><!--
                     --><tspan>M</tspan><!--
                     --><tspan>P</tspan><!--
@@ -71,6 +69,9 @@
                 </text>
               </g>
             </svg>        
+          </div>
+          <div class="contenedor_somosImpulsar">
+            <p class="somosImpulsar_p">Somos IMPULSAR, un equipo interdisciplinario de profesionales que te brindan las herramientas necesarias para que te conozcas como marca o emprendimiento, y a partir de ello impulsarte para destacar en el mercado. Contamos con nuestro propio sistema de construcción y evaluación que nos permite seleccionar las mejores opciones para su emprendimiento</p>
           </div>
           <!-- Scroll animation-->   
           <div id="contenedorAnimationScroll" class="contenedor_animationScroll">
