--- a/index.html
+++ b/index.html
@@ -50,30 +50,14 @@
     <main id="index_main" class="main">
       <section id="sectionPresentacion" class="section_presentacion">
         <div id="contenedorPresentacion" class="contenedor_presentacion">
-          <!-- text animation-->
-          <div class="container_textAnimation">
-            <svg viewBox="0 0 1418 116">
-              <title>IMPULSAR</title>
-              <g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
-                <text id="textAnimation" class="textAnimation">
-                  <tspan x="3" y="109"><!--
-                    --><tspan>I</tspan><!--
-                    --><tspan>M</tspan><!--
-                    --><tspan>P</tspan><!--
-                    --><tspan>U</tspan><!--
-                    --><tspan>L</tspan><!--
-                    --><tspan>S</tspan><!--
-                    --><tspan>A</tspan><!--
-                    --><tspan>R</tspan>
-                  </tspan>
-                </text>
-              </g>
-            </svg>        
-          </div>
-          <div class="contenedor_somosImpulsar">
+          <!-- text animation en html y scss aparte si se desea poner-->
+          <!--<div class="contenedor_somosImpulsar">
             <p class="somosImpulsar_p">Somos IMPULSAR, un equipo interdisciplinario de profesionales que te brindan las herramientas necesarias para que te conozcas como marca o emprendimiento, y a partir de ello impulsarte para destacar en el mercado. Contamos con nuestro propio sistema de construcción y evaluación que nos permite seleccionar las mejores opciones para su emprendimiento</p>
-          </div>
+          </div>-->
           <!-- Scroll animation-->   
+          <div class="contenedor_presentacion_h1">
+            <h1 class="presentacion_h1">IMPULSAMOS TU CAMINO DIGITAL 🚀</h1>
+          </div>
           <div id="contenedorAnimationScroll" class="contenedor_animationScroll">
             <svg class="mouse" xmlns="..." viewBox="0 0 76 130" preserveAspectRatio="xMidYmid meet">
               <g fill="none" fill-rule="evenodd">
@@ -84,6 +68,15 @@
             <p class="animationScroll_p">Desliza</p>
           </div>       
         </div>
+      </section>
+      <section id="sectionServicios" class="section_servicios">
+
+      </section>
+      <section id="sectionSomosImpulsar" class="section_somosImpulsar">
+        
+      </section>
+      <section id="sectionContacto" class="section_contacto">
+        
       </section>
     </main>
     <footer id="index_footer" class="index_footer">
