--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </section>
       <section id="sectionServicios" class="section_servicios">
         <h2 id="sectionServiciosTitle" class="h2 section_servicios_title wow animate__animated animate__fadeInLeft">
-          SERVICIOS
+          ¿QUÉ OFRECEMOS?
         </h2>
         <article id="containerContentImpulso" class="container_content_impulso">
           <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
@@ -119,7 +119,7 @@
               ¿POR QUÉ ELEGIRNOS?
             </h3>
             <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
-              Todas las soluciones en conjunto y en un solo lugar. Un producto final que respeta la identidad de marca e identidad visual que destaque.
+              Te brindamos todas las soluciones en conjunto y en un solo lugar. Generamos un producto final que respeta la identidad de marca e identidad visual que destaque.
               Al tener un  equipo conectado podrás encontrar las soluciones que se te vuelvan necesarias de manera ágil y eficaz.”
             </p>
           </div>
@@ -150,9 +150,9 @@
             </div>
           </div>
           <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
-            <h3 class="h3">¿En qué podemos ayudarte?</h3>
+            <h3 class="h3">QUERÉS SABER MÁS?</h3>
             <div class="mb-3 contenedor_inputs">
-                <label for="consulta" class="form-label">¡Cuéntanos!</label>
+                <label for="consulta" class="form-label">¡Preguntanos!</label>
                 <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3"></textarea>
             </div>
             <div id="contenedorBotonFormulario" class="contenedor_btn_formulario">
@@ -161,6 +161,9 @@
           </div>
         </form>
       </section>
+      <a href="https://api.whatsapp.com/send?phone=5492615955480" target="_blank">
+        <i class="fa fa-brands fa-whatsapp whatsapp"></i>
+      </a>
     </main>
     <footer>
       <!-- Abre footer principal-->
