--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
           </div>
           <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
-            <h3 class="h3">QUERÉS SABER MÁS?</h3>
+            <h3 class="h3">¿QUERÉS SABER MÁS?</h3>
             <div class="mb-3 contenedor_inputs">
                 <label for="consulta" class="form-label">¡Preguntanos!</label>
                 <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3"></textarea>
@@ -160,10 +160,41 @@
             </div>
           </div>
         </form>
+        <article id="contactoRedesUbicacion" class="contacto_redesUbicacion">
+          <div id="containerRedes" class="containerRedes">
+            <h3 class="h4">
+              REDES
+            </h3>            
+            <div class="contacto_redes">
+                <!-- Facebook -->
+                <a href="" type="button" class="contacto_redes_anchord">
+                  <i class="fa fa-facebook"></i>
+                </a>
+                <!-- Instagram -->
+                <a href="" type="button" class="contacto_redes_anchord">
+                  <i class="fa fa-brands fa-instagram"></i>
+                </a>
+                </a>
+                <!-- Whatsapp -->
+                <a href="" type="button" class="contacto_redes_anchord">
+                  <i class="fa fa-brands fa-whatsapp"></i>  
+                </a>
+            </div>
+          </div>
+          <div id="containerUbicacion" class="container_ubicacion">
+            <h3 class="h2 section__Contacto__Ubicacion__h2">¿DÓNDE ENCONTRARNOS?</h2>
+            <p>
+              <i class="bi bi-geo-alt"></i> Olegario V. Andrade 315, Mendoza, Argentina
+            </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3349.8745787053654!2d-68.8586003851099!3d-32.90148417693296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e090a39c9bbcb%3A0xa2d0f4a092f0413b!2sO.%20V.%20Andrade%20315%2C%20M5500BDO%20Mendoza!5e0!3m2!1ses!2sar!4v1636294490050!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="container iframe__Contacto"></iframe>
+          </div>
+        </article>
       </section>
-      <a href="https://api.whatsapp.com/send?phone=5492615955480" target="_blank">
-        <i class="fa fa-brands fa-whatsapp whatsapp"></i>
-      </a>
+      <section id="sectionWhatsapp">
+        <a href="https://api.whatsapp.com/send?phone=5492615955480" target="_blank">
+          <i class="fa fa-brands fa-whatsapp whatsapp"></i>
+        </a>
+      </section>
     </main>
     <footer>
       <!-- Abre footer principal-->
