preparacion de textAnimation

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <main id="index_main" class="main">
       <section id="sectionPresentacion" class="section_presentacion">
         <article id="contenedorPresentacion" class="contenedor_presentacion">
+
           <div class="contenedor_presentacion_h1">
             <h1 class="presentacion_h1">IMPULSAMOS TU CAMINO DIGITAL 🚀</h1>
           </div>
@@ -162,7 +163,7 @@
         </form>
         <article id="contactoRedesUbicacion" class="contacto_redesUbicacion">
           <div id="containerRedes" class="containerRedes">
-            <h3 class="h4">
+            <h3 class="h3">
               REDES
             </h3>            
             <div class="contacto_redes">
@@ -182,7 +183,7 @@
             </div>
           </div>
           <div id="containerUbicacion" class="container_ubicacion">
-            <h3 class="h2 section__Contacto__Ubicacion__h2">¿DÓNDE ENCONTRARNOS?</h2>
+            <h3 class="h3">¿DÓNDE ENCONTRARNOS?</h2>
             <p>
               <i class="bi bi-geo-alt"></i> Olegario V. Andrade 315, Mendoza, Argentina
             </p>
