--- a/refuncionalizar/textanimation.html
+++ b/refuncionalizar/textanimation.html
@@ -1,4 +1,4 @@
-<div class="container_textAnimation">
+  <div class="container_textAnimation">
     <svg viewBox="0 0 1418 116">
       <title>IMPULSAR</title>
       <g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
@@ -11,9 +11,108 @@
             --><tspan>L</tspan><!--
             --><tspan>S</tspan><!--
             --><tspan>A</tspan><!--
-            --><tspan>R</tspan>
+            --><tspan>M</tspan><!--
+            --><tspan>O</tspan><!--
+            --><tspan>S</tspan><!--
+            --><tspan> </tspan><!--
+            --><tspan>T</tspan><!--
+            --><tspan>U</tspan><!--
+            --><tspan> </tspan><!--
+            --><tspan>C</tspan><!--
+            --><tspan>A</tspan><!--
+            --><tspan>M</tspan><!--
+            --><tspan>I</tspan><!--
+            --><tspan>N</tspan><!--
+            --><tspan>O</tspan><!--
+            --><tspan> </tspan><!--
+            --><tspan>D</tspan><!--
+            --><tspan>I</tspan><!--
+            --><tspan>G</tspan><!--
+            --><tspan>I</tspan><!--
+            --><tspan>T</tspan><!--
+            --><tspan>A</tspan><!--
+            --><tspan>L</tspan>            
           </tspan>
         </text>
       </g>
     </svg>        
   </div>
+  <div class="container_textAnimation">
+    <svg viewBox="0 0 1418 116">
+      <title>IMPULSAR</title>
+      <g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
+        <text id="textAnimation" class="textAnimation">
+          <tspan x="3" y="109"><!--
+            --><tspan>C</tspan><!--
+            --><tspan>A</tspan><!--
+            --><tspan>M</tspan><!--
+            --><tspan>I</tspan><!--
+            --><tspan>N</tspan><!--
+            --><tspan>O</tspan><!--
+            --><tspan> </tspan><!--
+            --><tspan>D</tspan><!--
+            --><tspan>I</tspan><!--
+            --><tspan>G</tspan><!--
+            --><tspan>I</tspan><!--
+            --><tspan>T</tspan><!--
+            --><tspan>A</tspan><!--
+            --><tspan>L</tspan><!--
+            --><tspan>🚀</tspan>            
+          </tspan>
+        </text>
+      </g>
+    </svg>        
+  </div>
+
+  <article id="articleCaminoDigital" class="article_caminoDigital">
+    <div class="container_textAnimation">
+      <svg viewBox="0 0 1418 116">
+        <title>IMPULSAR</title>
+        <g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
+          <text id="textAnimation" class="textAnimation">
+            <tspan x="3" y="109"><!--
+              --><tspan>I</tspan><!--
+              --><tspan>M</tspan><!--
+              --><tspan>P</tspan><!--
+              --><tspan>U</tspan><!--
+              --><tspan>L</tspan><!--
+              --><tspan>S</tspan><!--
+              --><tspan>A</tspan><!--
+              --><tspan>M</tspan><!--
+              --><tspan>O</tspan><!--
+              --><tspan>S</tspan><!--
+              --><tspan> </tspan><!--
+              --><tspan>T</tspan><!--
+              --><tspan>U</tspan>            
+            </tspan>
+          </text>
+        </g>
+      </svg>        
+    </div>
+    <div class="container_textAnimation">
+      <svg viewBox="0 0 1418 116">
+        <title>IMPULSAR</title>
+        <g stroke="none" fill="none" fill-rule="evenodd" fill-opacity="0">
+          <text id="textAnimation" class="textAnimation">
+            <tspan x="3" y="109"><!--
+              --><tspan>C</tspan><!--
+              --><tspan>A</tspan><!--
+              --><tspan>M</tspan><!--
+              --><tspan>I</tspan><!--
+              --><tspan>N</tspan><!--
+              --><tspan>O</tspan><!--
+              --><tspan> </tspan><!--
+              --><tspan>D</tspan><!--
+              --><tspan>I</tspan><!--
+              --><tspan>G</tspan><!--
+              --><tspan>I</tspan><!--
+              --><tspan>T</tspan><!--
+              --><tspan>A</tspan><!--
+              --><tspan>L</tspan>            
+            </tspan>
+          </text>
+        </g>
+      </svg>     
+      <p class="wow animate__animated animate__fadeInLeft" data-wow-delay="5s">🚀</p>   
+    </div>
+  </article>
