--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Link Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">    
+    <!-- Glide-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
     <!-- Fontawesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Color Barra Direcciones-->
@@ -103,7 +105,95 @@
             <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
             <p class="impulso_paragraph">Como resultado final del proceso, tendrás una página web adaptada a tus necesidades y que te ayudará a plasmar los valores que te definen y a destacar en el mercado.</p>
           </div>
-        </article>                  
+        </article>   
+        <article id="carousel" class="carousel">
+          <div id="carouselContainer" class=" carousel_container">
+              <button id="carouselLeft" class="carousel_left" aria-label="carousel_left">
+                  <i class="fa fa-solid fa-chevron-left"></i>
+              </button>
+              <div id="carouselLista" class="carousel_lista">
+                  <div id="carouselElemento" class="carousel_elemento">
+                    <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">IMPULSO LEGAL</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="carouselElemento" class="carousel_elemento">
+                    <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">IMPULSO MARKETING</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="carouselElemento" class="carousel_elemento">
+                    <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">IMPULSO PSICOLOGÍA LABORAL</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="carouselElemento" class="carousel_elemento">
+                    <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">IMPULSO PUBLICIDAD</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="carouselElemento" class="carousel_elemento">
+                    <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">IMPULSO IMÁGEN</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <button id="carouselRight" class="carousel_right" aria-label="carousel_right">
+                  <i class="fa fa-solid fa-chevron-right"></i>
+              </button>
+          </div>
+          <div id="carousel_indicadores" class="carousel_indicadores" role="tablist"></div>
+      </article>             
       </section>
       <section id="sectionNosotros" class="section_nosotros">
         <article id="containerNosotros" class="container_nosotros wow animate__animated animate__fadeInLeft">
@@ -289,7 +379,7 @@
       <!-- Cierra Copyright -->
     </footer>     
     <!-- Scripts propios-->
-    <script type="text/javascript" src="./js/"></script>
+    <script type="text/javascript" src="./js/carousel.js"></script>
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Script Wow-->
@@ -297,5 +387,7 @@
     <script>
       new WOW().init();
     </script>
+    <!-- Glide-->
+    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
   </body>
 </html>
