--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <!-- Link Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">    
-    <!-- Glide-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.css">
     <!-- Fontawesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Color Barra Direcciones-->
@@ -106,16 +104,13 @@
             <p class="impulso_paragraph">Como resultado final del proceso, tendrás una página web adaptada a tus necesidades y que te ayudará a plasmar los valores que te definen y a destacar en el mercado.</p>
           </div>
         </article>   
-        <article id="carousel" class="carousel">
-          <div id="carouselContainer" class=" carousel_container">
-              <button id="carouselLeft" class="carousel_left" aria-label="carousel_left">
-                  <i class="fa fa-solid fa-chevron-left"></i>
-              </button>
-              <div id="carouselLista" class="carousel_lista">
-                  <div id="carouselElemento" class="carousel_elemento">
-                    <div id="card" class="card">
+        <article id="carousel-banner" class="container carousel carousel_container slide" data-bs-ride="carousel">
+          <!-- Abre slides del carousel-->
+          <div class="carousel-inner container carousel_content">
+              <div class="carousel-item active container">
+                  <div id="card" class="card">
                       <div class="dp">
-                          <h3 class="card_title">IMPULSO LEGAL</h3>
+                          <h3 class="card_title">SERVICIO</h3>
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
@@ -125,75 +120,128 @@
                               <a href="#" class="btn_card">Consultar</a>          
                           </div>
                       </div>
-                    </div>
-                  </div>
-                  <div id="carouselElemento" class="carousel_elemento">
-                    <div id="card" class="card">
-                      <div class="dp">
-                          <h3 class="card_title">IMPULSO MARKETING</h3>
-                      </div>
-                      <div class="card_content">
-                          <p class="card_paragraph">
-                              descripcion servicio
-                          </p>
-                          <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div id="carouselElemento" class="carousel_elemento">
-                    <div id="card" class="card">
-                      <div class="dp">
-                          <h3 class="card_title">IMPULSO PSICOLOGÍA LABORAL</h3>
-                      </div>
-                      <div class="card_content">
-                          <p class="card_paragraph">
-                              descripcion servicio
-                          </p>
-                          <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div id="carouselElemento" class="carousel_elemento">
-                    <div id="card" class="card">
-                      <div class="dp">
-                          <h3 class="card_title">IMPULSO PUBLICIDAD</h3>
-                      </div>
-                      <div class="card_content">
-                          <p class="card_paragraph">
-                              descripcion servicio
-                          </p>
-                          <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
-                          </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div id="carouselElemento" class="carousel_elemento">
-                    <div id="card" class="card">
-                      <div class="dp">
-                          <h3 class="card_title">IMPULSO IMÁGEN</h3>
-                      </div>
-                      <div class="card_content">
-                          <p class="card_paragraph">
-                              descripcion servicio
-                          </p>
-                          <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
-                          </div>
-                      </div>
-                    </div>
                   </div>
               </div>
-              <button id="carouselRight" class="carousel_right" aria-label="carousel_right">
-                  <i class="fa fa-solid fa-chevron-right"></i>
-              </button>
+              <div class="carousel-item container" >
+                  <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">SERVICIO</h3>
+                      </div>
+                          <div class="card_content">
+                              <p class="card_paragraph">
+                                  descripcion servicio
+                              </p>
+                  <div class="contenedor_btn_card">
+                      <a href="#" class="btn_card">Consultar</a>          
+                  </div>
+              </div>
+                  </div>
+              </div>
+              <div class="carousel-item container">
+                  <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">SERVICIO</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item container">
+                  <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">SERVICIO</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item container">
+                  <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">SERVICIO</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item container">
+                  <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">SERVICIO</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item container">
+                  <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">SERVICIO</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="carousel-item container">
+                  <div id="card" class="card">
+                      <div class="dp">
+                          <h3 class="card_title">SERVICIO</h3>
+                      </div>
+                      <div class="card_content">
+                          <p class="card_paragraph">
+                              descripcion servicio
+                          </p>
+                          <div class="contenedor_btn_card">
+                              <a href="#" class="btn_card">Consultar</a>          
+                          </div>
+                      </div>
+                  </div>
+              </div>                 
           </div>
-          <div id="carousel_indicadores" class="carousel_indicadores" role="tablist"></div>
-      </article>             
+          <!-- Cierra slides del carousel-->
+          <!-- Abre botones carousel-->
+          <!-- prev -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-banner" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <!-- Next -->
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel-banner" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+          <!-- Cierra botones carousel-->
+      </article>
       </section>
       <section id="sectionNosotros" class="section_nosotros">
         <article id="containerNosotros" class="container_nosotros wow animate__animated animate__fadeInLeft">
@@ -387,7 +435,5 @@
     <script>
       new WOW().init();
     </script>
-    <!-- Glide-->
-    <script src="https://cdn.jsdelivr.net/npm/glider-js@1.7.7/glider.min.js"></script>
   </body>
 </html>
