--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Link Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">    
+    <!-- Swipper-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <!-- Fontawesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Color Barra Direcciones-->
@@ -104,11 +106,10 @@
             <p class="impulso_paragraph">Como resultado final del proceso, tendrás una página web adaptada a tus necesidades y que te ayudará a plasmar los valores que te definen y a destacar en el mercado.</p>
           </div>
         </article>   
-        <article id="carousel-banner" class="container carousel carousel_container slide" data-bs-ride="carousel">
-          <!-- Abre slides del carousel-->
-          <div class="carousel-inner container carousel_content">
-              <div class="carousel-item active container">
-                  <div id="card" class="card">
+        <article class="carousel_article">
+          <div class="swiper mySwiper carousel_container">
+              <div class="swiper-wrapper carousel_content">
+                  <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">SERVICIO</h3>
                       </div>
@@ -121,24 +122,7 @@
                           </div>
                       </div>
                   </div>
-              </div>
-              <div class="carousel-item container" >
-                  <div id="card" class="card">
-                      <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
-                      </div>
-                          <div class="card_content">
-                              <p class="card_paragraph">
-                                  descripcion servicio
-                              </p>
-                  <div class="contenedor_btn_card">
-                      <a href="#" class="btn_card">Consultar</a>          
-                  </div>
-              </div>
-                  </div>
-              </div>
-              <div class="carousel-item container">
-                  <div id="card" class="card">
+                  <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">SERVICIO</h3>
                       </div>
@@ -151,9 +135,7 @@
                           </div>
                       </div>
                   </div>
-              </div>
-              <div class="carousel-item container">
-                  <div id="card" class="card">
+                  <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">SERVICIO</h3>
                       </div>
@@ -166,9 +148,7 @@
                           </div>
                       </div>
                   </div>
-              </div>
-              <div class="carousel-item container">
-                  <div id="card" class="card">
+                  <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">SERVICIO</h3>
                       </div>
@@ -181,9 +161,7 @@
                           </div>
                       </div>
                   </div>
-              </div>
-              <div class="carousel-item container">
-                  <div id="card" class="card">
+                  <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">SERVICIO</h3>
                       </div>
@@ -196,9 +174,7 @@
                           </div>
                       </div>
                   </div>
-              </div>
-              <div class="carousel-item container">
-                  <div id="card" class="card">
+                  <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">SERVICIO</h3>
                       </div>
@@ -211,37 +187,10 @@
                           </div>
                       </div>
                   </div>
+                  <div class="swiper-pagination"></div>
               </div>
-              <div class="carousel-item container">
-                  <div id="card" class="card">
-                      <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
-                      </div>
-                      <div class="card_content">
-                          <p class="card_paragraph">
-                              descripcion servicio
-                          </p>
-                          <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
-                          </div>
-                      </div>
-                  </div>
-              </div>                 
           </div>
-          <!-- Cierra slides del carousel-->
-          <!-- Abre botones carousel-->
-          <!-- prev -->
-          <button class="carousel-control-prev" type="button" data-bs-target="#carousel-banner" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-          </button>
-          <!-- Next -->
-          <button class="carousel-control-next" type="button" data-bs-target="#carousel-banner" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-          </button>
-          <!-- Cierra botones carousel-->
-      </article>
+        </article>
       </section>
       <section id="sectionNosotros" class="section_nosotros">
         <article id="containerNosotros" class="container_nosotros wow animate__animated animate__fadeInLeft">
@@ -427,9 +376,11 @@
       <!-- Cierra Copyright -->
     </footer>     
     <!-- Scripts propios-->
-    <script type="text/javascript" src="./js/carousel.js"></script>
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Swipper-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script type="text/javascript" src="./js/carouselSwipper.js"></script>
     <!-- Script Wow-->
     <script src="./js/wow.min.js"></script>
     <script>
